Mon Apr 22 17:53:36 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:

          The ImR locator binary can't link to the ImR_Client library
          since it should be using the async stubs instead.

Mon Apr 22 15:05:31 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/ORB_Core.cpp:

          Fix an uninitialized pointer

Mon Apr 22 14:54:18 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tao/ImR_Client/ImplRepo.idl:
        * tao/ImR_Client/ServerObject.idl:

          Fixed fuzz errors.

Fri Apr 19 19:17:11 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * TAO_IDL/be/be_visitor_exception/exception_cs.cpp:

          Fixed fuzz error in use of the new ACE log category macros.

Fri Apr 19 16:08:52 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/FT_Naming/FaultTolerant/client.cpp:
        * tao/Async_IORTable/Async_Table_Adapter.cpp:

          Clean up covarity related issues.

        * tao/Async_IORTable/Async_IOR_Table_Impl.cpp:

          fix to ensure that if the Async IORTable is intialized with a
          non-async capable locator, it still works.

        * bin/tao_orb_tests.lst:

        * tests/IORTable_Locator/Test.mpc:
        * tests/IORTable_Locator/async_server.cpp:
        * tests/IORTable_Locator/run_test.pl:

          Added a new test variant to run the async IORTable locator as well
          as the sync version.

Fri Apr 19 03:28:07 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
        * orbsvcs/ImplRepo_Service/async_imr_client_export.h:

          New async stubs lib can't have a dependency on imr_client.
          Fixed generation of stubs and skeletons with correct export macro.

        * tao/ImR_Client/ImR_Client.mpc:

          Make sure not to run tao_idl in the non-idl project.

Thu Apr 18 22:32:11 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * MPC/config/imr_client.mpb:
