@@ -78,6 +78,7 @@ AsyncAccessManager::add_interest (ImR_ResponseHandler *rh)
       ACE_NEW (l, AsyncLiveListener (this->info_->name.c_str(),
                                      this,
                                      this->locator_.pinger()));
+      LiveListener_ptr llp(l);
       if (!l->start())
         {
           if (!this->send_start_request())
@@ -196,8 +197,6 @@ AsyncAccessManager::server_is_running (const char *partial_ior,
       this->final_state ();
     }
 
-  // This is not a leak. The listener registers with
-  // the pinger and will delete itself when done.
   AsyncLiveListener *l = 0;
   if (this->info_->activation_mode == ImplementationRepository::PER_CLIENT)
     {
@@ -212,6 +211,8 @@ AsyncAccessManager::server_is_running (const char *partial_ior,
                                      this,
                                      this->locator_.pinger()));
     }
+
+  LiveListener_ptr llp(l);
   if (!l->start())
     {
       this->status (AAM_SERVER_DEAD);
@@ -511,10 +512,9 @@ AsyncLiveListener::~AsyncLiveListener (void)
 bool
 AsyncLiveListener::start (void)
 {
-  bool rtn = this->per_client_ ? this->pinger_.add_per_client_listener (this,srv_ref_.in())
-    : this->pinger_.add_listener (this);
-  if (!rtn)
-    delete this;
+  bool rtn = this->per_client_ ?
+    this->pinger_.add_per_client_listener (this, srv_ref_.in()) :
+    this->pinger_.add_listener (this);
   return rtn;
 }
 
@@ -529,7 +529,6 @@ AsyncLiveListener::status_changed (LiveStatus status)
   else
     {
       this->aam_->ping_replied (status);
-      delete this;
     }
   return true;
 }
