@@ -7,14 +7,160 @@
 #include "ace/High_Res_Timer.h"
 
 LiveListener::LiveListener (const char *server)
-  : server_(server)
+  : server_(server),
+    refcount_(1),
+    lock_()
+{
+}
+
+LiveListener::~LiveListener (void)
 {
 }
 
 const char *
 LiveListener::server (void) const
 {
-  return this->server_;
+  return this->server_.c_str ();
+}
+
+LiveListener *
+LiveListener::add_ref (void)
+{
+  ACE_GUARD_RETURN (TAO_SYNCH_MUTEX, mon, this->lock_, 0);
+  ++this->refcount_;
+  return this;
+}
+
+void
+LiveListener::remove_ref (void)
+{
+  int count = 0;
+  {
+    ACE_GUARD (TAO_SYNCH_MUTEX, mon, this->lock_);
+    count = --this->refcount_;
+  }
+  if (count == 0)
+    {
+      delete this;
+    }
+}
+
+//---------------------------------------------------------------------------
+//---------------------------------------------------------------------------
+
+LiveListener_ptr::LiveListener_ptr (void)
+  : val_ (0)
+{
+}
+
+LiveListener_ptr::LiveListener_ptr (LiveListener *ll)
+  :val_ (ll)
+{
+}
+
+LiveListener_ptr::LiveListener_ptr (const LiveListener_ptr &ll_ptr)
+  :val_ (ll_ptr.clone())
+{
+}
+
+LiveListener_ptr::~LiveListener_ptr (void)
+{
+  if (val_ != 0)
+    {
+      val_->remove_ref();
+    }
+}
+
+LiveListener_ptr &
+LiveListener_ptr::operator= (const LiveListener_ptr &ll_ptr)
+{
+  if (val_ != *ll_ptr)
+    {
+      if (val_ != 0)
+        {
+          val_->remove_ref();
+        }
+      val_ = ll_ptr.clone();
+    }
+  return *this;
+}
+
+LiveListener_ptr &
+LiveListener_ptr::operator= (LiveListener *ll)
+{
+  if (val_ != ll)
+    {
+      if (val_ != 0)
+        {
+          val_->remove_ref();
+        }
+      val_ = ll;
+    }
+  return *this;
+}
+
+const LiveListener *
+LiveListener_ptr::operator-> () const
+{
+  return val_;
+}
+
+const LiveListener *
+LiveListener_ptr::operator* () const
+{
+  return val_;
+}
+
+LiveListener *
+LiveListener_ptr::operator-> ()
+{
+  return val_;
+}
+
+LiveListener *
+LiveListener_ptr::operator* ()
+{
+  return val_;
+}
+
+bool
+LiveListener_ptr::operator== (const LiveListener_ptr &ll_ptr) const
+{
+  return val_ == *ll_ptr;
+}
+
+bool
+LiveListener_ptr::operator== (const LiveListener *ll) const
+{
+  return val_ == ll;
+}
+
+LiveListener *
+LiveListener_ptr::clone (void) const
+{
+  if (val_ != 0)
+    {
+      val_->add_ref();
+    }
+  return val_;
+}
+
+LiveListener *
+LiveListener_ptr::_retn (void)
+{
+  LiveListener * ll = val_;
+  val_ = 0;
+  return ll;
+}
+
+void
+LiveListener_ptr::assign (LiveListener *ll)
+{
+  if (val_ != 0)
+    {
+      val_->remove_ref();
+    }
+  val_ = ll;
 }
 
 //---------------------------------------------------------------------------
@@ -78,10 +224,11 @@ LiveEntry::~LiveEntry (void)
 }
 
 void
-LiveEntry::add_listener (LiveListener* ll)
+LiveEntry::add_listener (LiveListener *ll)
 {
   ACE_GUARD (TAO_SYNCH_MUTEX, mon, this->lock_);
-  this->listeners_.insert (ll);
+  LiveListener_ptr llp(ll->add_ref());
+  this->listeners_.insert (llp);
 }
 
 void
@@ -134,14 +281,9 @@ LiveEntry::status (LiveStatus l)
        !i.done();
        i.advance ())
     {
-      LiveListener **ll = 0;
-      i.next (ll);
-      if (*ll != 0)
+      if ((*i)->status_changed (this->liveliness_))
         {
-          if ((*ll)->status_changed (this->liveliness_))
-            {
-              remove.insert (*ll);
-            }
+          remove.insert (*i);
         }
     }
 
@@ -151,12 +293,7 @@ LiveEntry::status (LiveStatus l)
          !i.done();
          i.advance ())
       {
-        LiveListener **ll = 0;
-        i.next (ll);
-        if (*ll != 0)
-          {
-            this->listeners_.remove (*ll);
-          }
+        this->listeners_.remove (*i);
       }
   }
 
